--- a/package.json
+++ b/package.json
@@ -10,6 +10,16 @@
   "author": "Adarsh",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "connect-mongo": "^5.0.0",
+    "cookie-parser": "^1.4.6",
+    "csv-parser": "^3.0.0",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "express-ejs-layouts": "^2.5.1",
+    "express-session": "^1.17.3",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
